--- a/css/main.css
+++ b/css/main.css
@@ -207,13 +207,13 @@ hr {
 }
 
 
-.footer {
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 200px;
-  background-color: #dddddd;
-}
+/*.footer {*/
+/*  bottom: 0;*/
+/*  width: 100%;*/
+/*  !* Set the fixed height of the footer here *!*/
+/*  height: 200px;*/
+/*  background-color: #dddddd;*/
+/*}*/
 
 /*.footer > .container {*/
 /*  padding-top: 80px;*/
@@ -221,6 +221,15 @@ hr {
 /*  padding-left: 30px;*/
 /*  text-align: center;*/
 /*}*/
+
+/*updated by hsy*/
+.footer {
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 190px;
+  background-color: #dddddd;
+}
 
 /*updated by hsy*/
 .footer > .container {
